# RANController

./: .gitignore
RAN/: mean_field_model_3d.ipynb  mean_field_ran.ipynb  neural_model_ran.ipynb  ran3d.ipynb  setup.sh
RAN/.ipynb_checkpoints/: ran3d-checkpoint.ipynb
biodrone_controller/: package.xml  setup.cfg  setup.py
data/config_folder_0/run_1/: movable_0.m#0.pkl  movable_0.m#0_neural.csv  movable_0.m#0_perception.csv  movable_0.m#0_sensory.csv
data/config_folder_1/: config.json
data/config_folder_1/run_1/: movable_0.m#0.pkl  movable_0.m#0_neural.csv  movable_0.m#0_perception.csv  movable_0.m#0_sensory.csv  movable_0.m#0_targets.csv
src/crazyflie_controller/: package.xml  setup.cfg  setup.py
src/crazyflie_controller/crazyflie_controller/: drone_controller.py
src/crazyswarm_bringup/: CMakeLists.txt  package.xml
src/crazyswarm_bringup/launch/: sim_drone.launch.py
src/crazyswarm_bringup/rviz/: config.rviz
