<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="noah.ginzburg@gmail.com">Noah Ginzburg</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>crazyflie_interfaces</exec_depend>
  <depend>python3-numpy</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
